--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,9 +102,9 @@
     <div id="footer">
       <div id="footer_logo">
             <div id="powered_by">
-          Powered by <a href="http://www.projectfedena.org/">Fedena</a>
+          Powered by <a href="http://www.projectfedena.org/" target="_blank">Fedena</a>
         </div>
-          <a href="http://www.projectfedena.org/" class="footer-logo"></a>
+          <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
       </div>
     </div>
   </body>
