--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div id="help_top">
-    <div id="help_link"><a href="http://www.projectfedena.org/forum/">Help!</a></div>
+    <div id="help_link"><a href="http://www.projectfedena.org/forum/" target="_blank">Help!</a></div>
   </div>
 
   <div id="login_area_bg">
@@ -51,14 +51,15 @@
       :action => "forgot_password" %>
 
 </div>
+<div class="clearfooter"></div>
 </div>
 
     <div id="footer">
       <div id="footer_logo">
             <div id="powered_by">
-          Powered by <a href="http://www.projectfedena.org/">Fedena</a>
+          Powered by <a href="http://www.projectfedena.org/" target="_blank">Fedena</a>
         </div>
-          <a href="http://www.projectfedena.org/" class="footer-logo"></a>
+          <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
           
       </div>
     </div>
