--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -780,11 +780,12 @@ tr.tr-blank{
     clear : both;
     background: url(/images/foot.png) repeat-x;
     width:100%;
+     margin-top:-66px;
 }
 #footer_logo {
     height:66px;
-    /* background: url(/images/footer_logo.png) no-repeat right; */
-
+    width:980px;
+    margin:0 auto;
 }
 
 #footer_logo a.footer-logo{
