Added message during timetable allocation

--- a/app/views/timetable/_employee_list.rhtml
+++ b/app/views/timetable/_employee_list.rhtml
@@ -11,4 +11,6 @@
      <%= draggable_element("emp_sub_#{e.id}", :revert => true) %>
        <% end %>
      <% end %>
+<% else %>
+<h5>No teacher associated to this subject.</h5>
 <% end %>
