--- a/app/views/finance/donations_report.html.erb
+++ b/app/views/finance/donations_report.html.erb
@@ -1,5 +1,5 @@
 <div id="content-header">
-  <img src="/images/examination/index/page_logo.jpg" alt="" />
+   <img src="/images/show_finance.png" alt="" />
   <h1>Finance Monthly Report</h1>
   <h3>Donations</h3>
   <div id="app-back-button">
